finally fixed that annoying layout issue (#348)

--- a/src/styles/pages/docs.scss
+++ b/src/styles/pages/docs.scss
@@ -3,16 +3,7 @@
 // Main docs container
 .docs {
 	display: flex;
-	flex: 1 1 auto;
-	max-block-size: calc(100vh - 58px);
 	background-color: var(--fds-solid-background-base);
-	overflow: hidden;
-
-	// Small device support
-	@media screen and (width < 648px) {
-		// Account for the adjusted navbar height on mobile
-		block-size: calc(100vh - 64px);
-	}
 }
 
 // Docs page
@@ -31,7 +22,6 @@
 	// This is mainly here because I didn't want to use
 	// absolute positioning on the mobile search UI.
 	&-inner {
-		flex: 1 1 auto;
 		padding: 44px 56px;
 	}
 
@@ -115,7 +105,6 @@
 	// Since we don't have a sidebar anymore, vertically stack the elements in the page
 	.docs {
 		flex-direction: column;
-		max-block-size: calc(100vh - 66px);
 		margin-block-start: 2px;
 		border-block-start: 1px solid var(--fds-card-stroke-default);
 	}
